--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
     "next": "15.2.0",
+    "nodemailer": "^7.0.3",
     "openai": "^4.86.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
